# moonshot-cicd

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Dockerfile_PC  README.md  __main__.py  moonshot_config.yaml  pyproject.toml  run_coverage.sh
.ci/: gen_pre_build_summ.sh  run-flake8.sh  run-integrationtest.sh  run-pip-audit.sh  run-smoke-integration-test.sh  run-test.sh
.github/workflows/: docker-build-dev-main.yaml  docker-build-publish.yaml  docker-build-test.yaml  moonshot_testing.yml  pc-smoke-integration-test.yaml  pr-dev-main-image-build-test.yaml  smoke-integration-test.yaml  v1-pre-build-checks.yml
data/attack_modules/: hallucination.py  sensitive_data_disclosure.py  system_prompt_leakage.py
data/datasets/: brand_reputation_bbq.json  brand_reputation_harmbench.json  brand_reputation_jailbreakbench.json  brand_reputation_winobias_variation1.json  prompt_injection_payload_splitting.json  prompt_injection_role_playing.json  sensitive_data_disclosure_general.json  test_sample_dataset.json
process_check_app/: streamlit_app.py
process_check_app/backend/: map.py  pdf_generator.py  report_validation.py  spreadsheet.py  workspace.py
process_check_app/frontend/: get_started.py  upload_result.py  welcome.py
process_check_app/tests/: __init__.py  test_actions_component.py  test_cards_component.py  test_map.py  test_ms_ga_schema.py  test_ms_v06_schema.py  test_pdf_generator.py  test_principle_calculator.py  test_report_validation.py  test_spreadsheet.py  test_streamlit_app.py  test_workspace.py
src/adapters/api/: api_adapter.py
tests/entrypoints/: test_cli.py
(+105 files in other folders)
