[tool.poetry]
name = "moonshot-cicd"
version = "1.1.0"
description = "A simple and modular tool to evaluate and red-team any LLM application."
authors = ["The Moonshot Team <our.moonshot.team@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [
    { include = "entrypoints", from = "src" },
    { include = "domain", from = "src" },
    { include = "adapters", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.38.23"
pydantic = "^2.11.5"
openai = "^1.82.0"
click = "^8.2.1"
toml = "^0.10.2"
wonderwords = "^2.2.0"
ragas = "^0.2.15"
langchain-openai = "^0.3.18"
rich = "^14.0.0"
aiohttp = "^3.12.4"
requests = "^2.32.4"
urllib3 = "^2.5.0"
pillow = "11.3.0"

[tool.poetry.group.process_checks.dependencies]
streamlit = "^1.45.1"
openpyxl = "^3.1.5"
bleach = "^6.2.0"
reportlab = "^4.4.1"
matplotlib = "^3.10.3"
pydantic = "^2.11.5"
streamlit-scroll-to-top = "^0.0.4"

[tool.poetry.scripts]
moonshot = "entrypoints.cli.cli:cli"

[tool.poetry.group.dev.dependencies]
anybadge = "^1.14.0"
black = "^24.8.0"
coverage = "^7.7.0"
flake8 = "^7.1.0"
isort = "^5.13.2"
poetry-plugin-export = "^1.8.0"
pre-commit = "^4.1.0"
pyinstrument = "^4.7.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-html = "^4.1.1"
pytest-json = "^0.4.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
testing = ["pytest", "pyyaml", "pytest-benchmark", "coverage"]
